8254105: allow static members in inner classes, add binary compatibility tests